--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react": "^16.11.2",
+    "react-dom": "^16.11.2",
+    "react-mapbox-gl": "^5.1.1",
+    "react-scripts": "3.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
