--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "mapbox-gl": "^2.2.0",
+    "rc-slider": "^9.7.2",
     "react": "^16.11.2",
     "react-dom": "^16.11.2",
     "react-mapbox-gl": "^5.1.1",
@@ -21,8 +20,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
