--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "^4.11.2",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@turf/turf": "^6.3.0",
+    "mapbox-gl": "^2.2.0",
     "rc-slider": "^9.7.2",
     "react": "^16.11.2",
     "react-dom": "^16.11.2",
